@@ -4,8 +4,11 @@
  */
 package jp.co.ndensan.reams.db.dbc.divcontroller.controller.parentdiv.DBC0600031;
 
+import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import jp.co.ndensan.reams.db.dbc.business.core.basic.ShokanFukushiYoguHanbaihi;
 import jp.co.ndensan.reams.db.dbc.business.core.basic.ShokanHanteiKekka;
 import jp.co.ndensan.reams.db.dbc.business.core.basic.ShokanShukei;
@@ -55,8 +58,6 @@ public class PnlKeteiJohoMsg {
     private static final RString 連番 = new RString("1");
     private static final RString 明細番号 = new RString("0001");
     private static final ShoKisaiHokenshaNo 証記載保険者番号 = new ShoKisaiHokenshaNo("888888");
-    private static List<dgSyokanbaraikete_Row> 償還払決定一覧;
-    private static KetteJoho 決定情報;
 
     /**
      * onLoad事件
@@ -88,8 +89,16 @@ public class PnlKeteiJohoMsg {
         } else {
             div.getCcdKetteiList().loadInitialize(被保険者番号, サービス年月, 整理番号, 業務区分, モード_照会);
         }
-        償還払決定一覧 = div.getCcdKetteiList().getShokanbaraiketteiJohoDiv().getDgSyokanbaraikete().getDataSource();
-        決定情報 = ViewStateHolder.get(jp.co.ndensan.reams.db.dbz.definition.core.ViewStateKeys.決定情報, KetteJoho.class);
+        List<dgSyokanbaraikete_Row> 決定情報登録_償還払決定一覧 = div.getCcdKetteiList().
+                getShokanbaraiketteiJohoDiv().getDgSyokanbaraikete().getDataSource();
+        KetteJoho 決定情報登録_決定情報 = ViewStateHolder.get(
+                jp.co.ndensan.reams.db.dbz.definition.core.ViewStateKeys.決定情報, KetteJoho.class);
+        Map<RString, Integer> map_Row = new HashMap<>();
+        for (dgSyokanbaraikete_Row list : 決定情報登録_償還払決定一覧) {
+            map_Row.put(list.getNo(), list.getSagakuKingaku().getValue().intValue());
+        }
+        ViewStateHolder.put(ViewStateKeys.決定情報登録_償還払決定一覧, (Serializable) map_Row);
+        ViewStateHolder.put(ViewStateKeys.決定情報登録_決定情報, 決定情報登録_決定情報);
         return ResponseData.of(div).respond();
     }
 
@@ -100,18 +109,27 @@ public class PnlKeteiJohoMsg {
      * @return 福祉用具購入費支給申請一覧画面へ遷移
      */
     public ResponseData<PnlKeteiJohoMsgDiv> onClick_btnFree(PnlKeteiJohoMsgDiv div) {
-        if (モード_削除.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class))
-                || モード_参照.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class))) {
-            return ResponseData.of(div).forwardWithEventName(DBC0600031TransitionEventName.一覧に戻る).respond();
+        Map<RString, Integer> 決定情報登録_償還払決定一覧 = ViewStateHolder.get(ViewStateKeys.決定情報登録_償還払決定一覧, Map.class);
+        KetteJoho 決定情報登録_決定情報 = ViewStateHolder.get(ViewStateKeys.決定情報登録_決定情報, KetteJoho.class);
+        if (モード_削除.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+        ))
+                || モード_参照.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+                        ))) {
+            return ResponseData.of(div)
+                    .forwardWithEventName(DBC0600031TransitionEventName.一覧に戻る).respond();
         }
-        boolean flag = getHandler(div).is内容変更状態(償還払決定一覧, 決定情報);
-        if (flag && (モード_登録.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class))
-                || モード_修正.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class)))) {
+        boolean flag = getHandler(div).is内容変更状態(決定情報登録_償還払決定一覧, 決定情報登録_決定情報);
+        if (flag
+                && (モード_登録.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+                        ))
+                || モード_修正.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+                        )))) {
             if (!ResponseHolder.isReRequest()) {
                 QuestionMessage message = new QuestionMessage(UrQuestionMessages.入力内容の破棄.getMessage().getCode(),
                         UrQuestionMessages.入力内容の破棄.getMessage().evaluate());
                 return ResponseData.of(div).addMessage(message).respond();
             }
+
             if (new RString(UrQuestionMessages.入力内容の破棄.getMessage().getCode())
                     .equals(ResponseHolder.getMessageCode())
                     && ResponseHolder.getButtonType() == MessageDialogSelectedResult.Yes) {
@@ -120,11 +138,16 @@ public class PnlKeteiJohoMsg {
                 return ResponseData.of(div).respond();
             }
         }
-        if ((!flag && (モード_登録.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class))))
-                || (モード_修正.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class)))) {
-            return ResponseData.of(div).forwardWithEventName(DBC0600031TransitionEventName.一覧に戻る).respond();
+        if ((!flag
+                && (モード_登録.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+                        ))))
+                || (モード_修正.equals(ViewStateHolder.get(ViewStateKeys.状態, RString.class
+                        )))) {
+            return ResponseData.of(div)
+                    .forwardWithEventName(DBC0600031TransitionEventName.一覧に戻る).respond();
         }
-        return ResponseData.of(div).respond();
+        return ResponseData.of(div)
+                .respond();
     }
 
     /**
@@ -180,6 +203,8 @@ public class PnlKeteiJohoMsg {
      * @return 福祉用具購入費支給申請_明細登録へ遷移す
      */
     private ResponseData<PnlKeteiJohoMsgDiv> 登録修正Update(PnlKeteiJohoMsgDiv div) {
+        Map<RString, Integer> 決定情報登録_償還払決定一覧 = ViewStateHolder.get(ViewStateKeys.決定情報登録_償還払決定一覧, Map.class);
+        KetteJoho 決定情報登録_決定情報 = ViewStateHolder.get(ViewStateKeys.決定情報登録_決定情報, KetteJoho.class);
         HihokenshaNo 被保険者番号 = ViewStateHolder.get(ViewStateKeys.被保険者番号, HihokenshaNo.class);
         FlexibleYearMonth サービス年月 = ViewStateHolder.get(ViewStateKeys.サービス提供年月, FlexibleYearMonth.class);
         RString 整理番号 = ViewStateHolder.get(ViewStateKeys.整理番号, RString.class);
@@ -189,7 +214,7 @@ public class PnlKeteiJohoMsg {
         if (adiv.getTxtKetebi().getValue() == null) {
             return ResponseData.of(div).addValidationMessages(getHandler(div).getCheckMessage()).respond();
         }
-        boolean flag = getHandler(div).is内容変更状態(償還払決定一覧, 決定情報);
+        boolean flag = getHandler(div).is内容変更状態(決定情報登録_償還払決定一覧, 決定情報登録_決定情報);
         if (!flag) {
             if (!ResponseHolder.isReRequest()) {
                 return ResponseData.of(div).addMessage(DbzInformationMessages.内容変更なしで保存不可.getMessage()).respond();
@@ -207,11 +232,11 @@ public class PnlKeteiJohoMsg {
                                         .getTxtKetebi().getValue().getYearMonth().toString()))
                         .set支給区分コード(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv().
                                 getRdoShikyukubun().getSelectedKey())
-                        .set支払金額(new Integer(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv()
+                        .set支払金額(Integer.valueOf(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv()
                                         .getTxtShiharaikingakugoke().getValue().toString()))
                         .set増減点(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv()
                                 .getTxtZogentani().getValue().intValue())
-                        .set請求額差額金額(new Integer(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv().
+                        .set請求額差額金額(Integer.valueOf(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv().
                                         getTxtSagakuGoke().getValue().toString()))
                         .set増減理由等(div.getCcdKetteiList().getShokanbaraiketteiJohoDiv()
                                 .getTxtZogenriyu().getValue())
